Added ex 3 to bloco2

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@
 *.tokens
 *BaseListener.java
 *BaseVisitor.java
+*Listener.java
 *Lexer.java
 *Parser.java
 *Visitor.java
+*Main.java
 !MyVisitor.java
+!MyListener.java
